<resources>
    <string name="app_name">NeRecipe</string>
    <string name="button_add_description">Add</string>
    <string name="icon_background_description">Icon background</string>
    <string name="text_background">There is nothing here! Let is fix it</string>
    <string name="button_clear_filter">ClearFilter</string>
    <string name="title_hint">Title</string>
    <string name="author_name_hint">Author</string>
    <string name="text_recipe_hint">Recipe</string>
    <string name="european_type">European</string>
    <string name="asian_type">Asian</string>
    <string name="panasian_type">Panasian</string>
    <string name="eastern_type">Eastern</string>
    <string name="american_type">American</string>
    <string name="russian_type">Russian</string>
    <string name="mediterranean_type">Mediterranean</string>
    <string name="button_save_description">Save</string>
    <string name="button_apply_text">Apply</string>
    <string name="menu_options_description">menu</string>
    <string name="button_favorite_description">Favorite</string>
    <string name="category_recipe_hint">category</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="all_recipes">All Recipes</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="text_hint">hint</string>
</resources>