<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ru.netology.nerecipe.ui.RecipeCreateFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topMenu"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/topBar" />


        <EditText
            android:id="@+id/authorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/author_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/textRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/text_recipe_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@id/authorName" />

        <RadioGroup
            android:id="@+id/categoryRecipeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRecipe">

            <RadioButton
                android:id="@+id/checkBoxEuropean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/european_type" />

            <RadioButton
                android:id="@+id/checkBoxAsian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asian_type" />

            <RadioButton
                android:id="@+id/checkBoxPanasian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panasian_type" />

            <RadioButton
                android:id="@+id/checkBoxEastern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eastern_type" />

            <RadioButton
                android:id="@+id/checkBoxAmerican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american_type" />

            <RadioButton
                android:id="@+id/checkBoxRussian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian_type" />

            <RadioButton
                android:id="@+id/checkBoxMediterranean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediterranean_type" />

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/teal_200"
            android:contentDescription="@string/button_save_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>