<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nerecipe.ui.RecipeFilterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:backgroundTint="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <CheckBox
        android:id="@+id/checkBoxEuropean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:clickable="true"
        android:text="@string/european_type"
        app:layout_constraintEnd_toEndOf="@id/buttonApply"
        app:layout_constraintStart_toStartOf="@id/buttonApply"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <CheckBox
        android:id="@+id/checkBoxAsian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/asian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEuropean"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEuropean" />

    <CheckBox
        android:id="@+id/checkBoxPanasian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/panasian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAsian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAsian" />

    <CheckBox
        android:id="@+id/checkBoxEastern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/eastern_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPanasian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPanasian" />

    <CheckBox
        android:id="@+id/checkBoxAmerican"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/american_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEastern"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEastern" />

    <CheckBox
        android:id="@+id/checkBoxRussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/russian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmerican"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmerican" />

    <CheckBox
        android:id="@+id/checkBoxMediterranean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mediterranean_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRussian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRussian" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:text="@string/button_apply_text"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMediterranean" />

</androidx.constraintlayout.widget.ConstraintLayout>